--- a/lectures/More Complicated Data Types.ipynb
+++ b/lectures/More Complicated Data Types.ipynb
@@ -34,10 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "85d3d246",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'is', 'a', 'list', 'of', 'strs']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Lists are made by placing objects\n",
     "## within square brackets, separated by commas\n",
@@ -46,10 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ceea7383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 15, 'a', ['list'], True]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Lists can consist of more than one kind of\n",
     "## python object, even other lists\n",
@@ -76,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7a001765",
    "metadata": {},
    "outputs": [],
@@ -88,10 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "74fdcbf8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x"
    ]
@@ -110,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fda2d1de",
    "metadata": {},
    "outputs": [],
@@ -124,10 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f810c542",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'apple'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You can index a list like so\n",
     "fruit_basket[0]"
@@ -135,10 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3dca482f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'grapes'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Here's an example with the reverse indexing\n",
     "fruit_basket[-4]"
@@ -146,27 +201,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "99f847f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The third entry is kiwi\n"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
     "## What is the 3rd entry of the fruit_basket?\n",
     "## What about the 2nd entry from the right?\n",
-    "\n"
+    "\n",
+    "print(\"The third entry is\", fruit_basket[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "6754766d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 2nd entry from the right is lemon\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The 2nd entry from the right is\", fruit_basket[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "7f4ab270",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['banana', 'grapes', 'kiwi']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## Index the list with 1:4, what is returned?\n",
-    "\n"
+    "\n",
+    "fruit_basket[1:4]"
    ]
   },
   {
@@ -183,10 +277,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6c5b3bc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['grapes', 'kiwi', 'lemon', 'grapefruit']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Here we get everything from item 2 onward,\n",
     "## Note item 2 is actually the 3rd item in the list\n",
@@ -205,14 +310,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "92f9b682",
    "metadata": {},
    "outputs": [],
    "source": [
     "## You code\n",
     "## overwrite the \"lemon\" in the fruit_basket with a \"lime\"\n",
-    "\n"
+    "\n",
+    "fruit_basket[4] = \"lime\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ae3fb1e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'banana', 'grapes', 'kiwi', 'lime', 'grapefruit']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruit_basket"
    ]
   },
   {
@@ -227,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "070c440e",
    "metadata": {},
    "outputs": [],
@@ -239,17 +366,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9201ed09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'banana', 'grapes', 'kiwi', 'lime', 'grapefruit', 'plum']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fruit_basket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b0b7f208",
    "metadata": {},
    "outputs": [],
@@ -261,17 +399,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e9250e7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple',\n",
+       " 'banana',\n",
+       " 'grapes',\n",
+       " 'kiwi',\n",
+       " 'lime',\n",
+       " 'grapefruit',\n",
+       " 'plum',\n",
+       " 'pineapple',\n",
+       " 'mango',\n",
+       " 'coconut']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fruit_basket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "bbb9748a",
    "metadata": {},
    "outputs": [],
@@ -282,14 +440,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8157f338",
+   "metadata": {},
+   "source": [
+    "It sorts the list by alphabetical order"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "33e8fd08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple',\n",
+       " 'banana',\n",
+       " 'coconut',\n",
+       " 'grapefruit',\n",
+       " 'grapes',\n",
+       " 'kiwi',\n",
+       " 'lime',\n",
+       " 'mango',\n",
+       " 'pineapple',\n",
+       " 'plum']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Look at fruit_basket here\n",
-    "\n"
+    "\n",
+    "fruit_basket"
    ]
   },
   {
@@ -304,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "4201df3d",
    "metadata": {},
    "outputs": [],
@@ -312,6 +499,48 @@
     "## You code\n",
     "## Find the 4th and 7th letter in this string\n",
     "test_string = \"apple is a computer\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2f197598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_string[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "51e7b4df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_string[7]"
    ]
   },
   {
@@ -328,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "cccf7f9d",
    "metadata": {},
    "outputs": [],
@@ -340,36 +569,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "e980766e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carrots\n",
+      "brocoli\n"
+     ]
+    }
+   ],
    "source": [
     "## You Code\n",
     "## What is the first entry in the veggie_tray from the left?\n",
     "## What is the first entry in the veggie_tray from the right?\n",
     "\n",
-    "\n"
+    "print(veggie_tray[0])\n",
+    "print(veggie_tray[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "e81e1e80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## You code\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m## Try to overwrite the \"corn\" with \"peas\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m## What happens?\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mveggie_tray\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpeas\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
     "## Try to overwrite the \"corn\" with \"peas\"\n",
-    "## What happens?\n"
+    "## What happens?\n",
+    "veggie_tray[1]=\"peas\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "53395e06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['carrots', 'peas', 'brussels sprout', 'brocoli']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## Put veggie_tray inside of list(), this casts the tuple as a list\n",
@@ -396,10 +659,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "8a6b620e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'is', 'set', 'this'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## A set can be made by placing distinct\n",
     "## python objects between {}, separated by commas\n",
@@ -408,20 +682,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "0cb812ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type({\"this\", \"is\", \"a\", \"set\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "9d4e3690",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'almond milk',\n",
+       " 'apples',\n",
+       " 'bananas',\n",
+       " 'beef',\n",
+       " 'bread',\n",
+       " 'chicken',\n",
+       " 'milk',\n",
+       " 'mushrooms',\n",
+       " 'onion powder'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You can also use the command set()\n",
     "## This can be used to remove repeats from lists or tuples\n",
@@ -435,7 +739,8 @@
     "                   \"bread\", \"beef\", \"chicken\"]\n",
     "\n",
     "## You code here\n",
-    "\n"
+    "\n",
+    "set(grocery_list)"
    ]
   },
   {
@@ -450,10 +755,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "30368719",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Intersection\n",
     "set_1 = {'apple', 'computers'}\n",
@@ -465,10 +781,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "46f8e615",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'american', 'apple', 'as', 'computers', 'pie'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Union\n",
     "\n",
@@ -478,10 +805,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a7d7b2b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'computers'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## minus\n",
     "\n",
@@ -491,15 +829,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "8adf4fdd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code - The empty set?\n",
     "\n",
     "## find the type of {}\n",
-    "## Is it what you think it would be?\n"
+    "## Is it what you think it would be?\n",
+    "type({})"
    ]
   },
   {
@@ -516,10 +866,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "a387e27f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "## Dictionaries\n",
     "\n",
@@ -532,10 +891,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "50db6233",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple': 1, 'as': 2, 'american': 1, 'pie': 1}\n",
+      "\n",
+      "practice_dict.keys(): dict_keys(['apple', 'as', 'american', 'pie'])\n",
+      "\n",
+      "practice_dict.values(): dict_values([1, 2, 1, 1])\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## To define a dictionary you do the following\n",
     "## dict_name = {'key': value, 'key': value, 'key':value, ...}\n",
@@ -555,39 +927,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "b39abbd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You can access the values for particular keys with this syntax\n",
     "## dictionary[key]\n",
-    "practice_dict['apple']"
+    "practice_dict['as']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "dd44cdbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('apple', 1), ('as', 2), ('american', 1), ('pie', 1)])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## what is the output of practice_dict.items()?\n",
-    "\n"
+    "\n",
+    "practice_dict.items()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "3c83daf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'flour': '2 cups',\n",
+       " 'egg': '2',\n",
+       " 'butter': 'quarter bar',\n",
+       " 'sugar': '2 tablespoons',\n",
+       " 'baking powder': '1 teaspoon',\n",
+       " 'yogurt': '1'}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## Use a dictionary to store the ingredient amounts you \n",
     "## need for an imaginary recipe\n",
-    "ingredients = \n",
+    "ingredients = {\"flour\":\"2 cups\", \"egg\":\"2\", \"butter\":\"quarter bar\", \"sugar\":\"2 tablespoons\", \"baking powder\":\"1 teaspoon\", \"yogurt\":\"1\"}\n",
     "\n",
     "\n",
     "ingredients"
@@ -639,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
