--- a/practice-problems/Data Structures Conditionals and Loops.ipynb
+++ b/practice-problems/Data Structures Conditionals and Loops.ipynb
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
+    "t = 17\n"
    ]
   },
   {
@@ -37,13 +37,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Little orphan annie'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
+    "\"little orphan annie\".capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Little orphan annie'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Little orphan annie\".capitalize()"
    ]
   },
   {
@@ -55,13 +86,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
+    "multiples_loop = []\n",
+    "for i in range(1,21):\n",
+    "    multiples_loop.append(3*i)\n",
+    "\n",
+    "multiples_loop\n"
    ]
   },
   {
@@ -73,13 +119,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7,\n",
+       " 14,\n",
+       " 21,\n",
+       " 28,\n",
+       " 35,\n",
+       " 42,\n",
+       " 49,\n",
+       " 56,\n",
+       " 63,\n",
+       " 70,\n",
+       " 77,\n",
+       " 84,\n",
+       " 91,\n",
+       " 98,\n",
+       " 105,\n",
+       " 112,\n",
+       " 119,\n",
+       " 126,\n",
+       " 133,\n",
+       " 140]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
+    "multiples = [7*i for i in range(1,21)]\n",
+    "multiples\n"
    ]
   },
   {
@@ -91,13 +168,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'timestimestimestimestimes'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
+    "\"times\"*5\n"
    ]
   },
   {
@@ -124,24 +212,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For N= 10 approximation is 3.0961615264636406\n",
+      "For N= 20 approximation is 3.117786501758877\n",
+      "For N= 100 approximation is 3.136642188870299\n",
+      "For N= 1000 approximation is 3.141093153121444\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Code here\n",
+    "approx_pi=0\n",
     "\n",
-    "\n"
+    "N=10\n",
+    "\n",
+    "for i in range(N+1):\n",
+    "    approx_pi = approx_pi +8/((4*i + 1)*(4*i + 3))\n",
+    "print(\"For N=\", N, \"approximation is\", approx_pi)\n",
+    "\n",
+    "approx_pi=0\n",
+    "\n",
+    "N=20\n",
+    "\n",
+    "for i in range(N+1):\n",
+    "    approx_pi = approx_pi +8/((4*i + 1)*(4*i + 3))\n",
+    "print(\"For N=\", N, \"approximation is\", approx_pi)\n",
+    "\n",
+    "approx_pi=0\n",
+    "\n",
+    "N=100\n",
+    "\n",
+    "for i in range(N+1):\n",
+    "    approx_pi = approx_pi +8/((4*i + 1)*(4*i + 3))\n",
+    "print(\"For N=\", N, \"approximation is\", approx_pi)\n",
+    "\n",
+    "approx_pi=0\n",
+    "\n",
+    "N=1000\n",
+    "\n",
+    "for i in range(N+1):\n",
+    "    approx_pi = approx_pi +8/((4*i + 1)*(4*i + 3))\n",
+    "print(\"For N=\", N, \"approximation is\", approx_pi)"
    ]
   },
   {
@@ -153,24 +271,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Time\n",
+      "TimeTime\n",
+      "TimeTimeTime\n",
+      "TimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTimeTime\n",
+      "TimeTimeTimeTime\n",
+      "TimeTimeTime\n",
+      "TimeTime\n",
+      "Time\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Code here\n",
+    "for i in range(15):\n",
+    "    print(\"Time\"*i)\n",
     "\n",
-    "\n"
+    "print()\n",
+    "\n",
+    "for i in range(15):\n",
+    "    print(\"Time\"*(15-i))"
    ]
   },
   {
@@ -182,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,13 +347,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': 2,\n",
+       " 'banana': 1,\n",
+       " 'computer': 2,\n",
+       " 'programming': 1,\n",
+       " 'language': 1,\n",
+       " 'Obama': 1,\n",
+       " 'Bush': 1,\n",
+       " 'Trump': 1,\n",
+       " 'Eisenhower': 1,\n",
+       " 'president': 4,\n",
+       " 'dog': 2,\n",
+       " 'cat': 1,\n",
+       " 'duck': 2,\n",
+       " 'goose': 1,\n",
+       " 'baseball': 1,\n",
+       " 'basketball': 1,\n",
+       " 'football': 1,\n",
+       " 'hockey': 1,\n",
+       " 'soccer': 1,\n",
+       " 'sports': 1,\n",
+       " 'lebron': 1,\n",
+       " 'james': 1,\n",
+       " 'darius': 1,\n",
+       " 'garland': 1}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
+    "my_dict={}\n",
+    "\n",
+    "for word in sample_words:\n",
+    "    if word in my_dict.keys():\n",
+    "        my_dict[word]=my_dict[word]+1\n",
+    "    else:\n",
+    "        my_dict[word]=1\n",
+    "\n",
+    "my_dict\n"
    ]
   },
   {
@@ -214,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,13 +416,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-2\n",
+      "-3\n",
+      "-2\n",
+      "-3\n",
+      "-2\n",
+      "-1\n",
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-1\n",
+      "0\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n"
+    "position = 0\n",
+    "\n",
+    "for i in steps:\n",
+    "    print(position)\n",
+    "    position = position + i\n"
    ]
   },
   {
@@ -278,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
