--- a/practice-problems/Functions.ipynb
+++ b/practice-problems/Functions.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "3.136642188870299"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
     "def loop_pi(N):\n",
     "    total=0\n",
     "    for i in range(N+1):\n",
-    "        total += 8/((4*i + 1)*(4*i + 3))\n",
+    "        total = total + 8/((4*i + 1)*(4*i + 3))\n",
     "    return total\n",
     "loop_pi(100)\n",
     "\n"
