--- a/practice-problems/Writing to File and Importing a Package.ipynb
+++ b/practice-problems/Writing to File and Importing a Package.ipynb
@@ -20,25 +20,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "\n",
+      "1\n",
+      "\n",
+      "2\n",
+      "\n",
+      "3\n",
+      "\n",
+      "4\n",
+      "\n",
+      "5\n",
+      "\n",
+      "6\n",
+      "\n",
+      "7\n",
+      "\n",
+      "8\n",
+      "\n",
+      "9\n",
+      "\n",
+      "10\n",
+      "\n",
+      "11\n",
+      "\n",
+      "12\n",
+      "\n",
+      "13\n",
+      "\n",
+      "14\n",
+      "\n",
+      "15\n",
+      "\n",
+      "16\n",
+      "\n",
+      "17\n",
+      "\n",
+      "18\n",
+      "\n",
+      "19\n",
+      "\n",
+      "20\n",
+      "\n",
+      "21\n",
+      "\n",
+      "22\n",
+      "\n",
+      "23\n",
+      "\n",
+      "24\n",
+      "\n",
+      "25\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "with open(\"/Users/beatriz/Documents/GitHub/python-prep/data/practice_file.txt\",\"r\") as file:\n",
+    "    file_list = file.readlines()\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Code here\n",
+    "file.close()\n",
     "\n",
-    "\n",
+    "for i in range(len(file_list)):\n",
+    "    print(file_list[i])\n",
     "\n"
    ]
   },
@@ -51,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Code here\n",
     "\n",
-    "\n",
+    "import random as r\n",
     "\n"
    ]
   },
@@ -70,13 +123,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17897157176775147"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n",
+    "r.random()\n",
     "\n"
    ]
   },
@@ -89,14 +153,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 9, 2, 14, 47, 8, 146906)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "import datetime as d\n",
     "\n",
-    "\n"
+    "d.datetime.now()"
    ]
   },
   {
@@ -108,14 +184,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1992, 6, 4, 2, 0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "birthday = d.datetime(1992, 6, 4, 2, 00, 00000)\n",
     "\n",
-    "\n"
+    "birthday"
    ]
   },
   {
@@ -129,11 +217,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "position\n",
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-1\n",
+      "-2\n",
+      "-1\n",
+      "-2\n",
+      "-1\n",
+      "-2\n",
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-4\n",
+      "-5\n",
+      "-4\n",
+      "-5\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-6\n",
+      "-5\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-5\n",
+      "-6\n",
+      "-5\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-9\n",
+      "-10\n",
+      "-11\n",
+      "-10\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-8\n",
+      "-9\n",
+      "-10\n",
+      "-9\n",
+      "-10\n",
+      "-11\n",
+      "-10\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-5\n",
+      "-4\n",
+      "-3\n",
+      "-2\n",
+      "-3\n",
+      "-2\n",
+      "-1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-4\n",
+      "-5\n",
+      "-4\n",
+      "-5\n",
+      "-6\n",
+      "-7\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
+    "\n",
+    "with open(\"/Users/beatriz/Documents/GitHub/python-prep/data/random_walk.csv\",\"w\") as file:\n",
+    "    file.write(\"position\\n\")\n",
+    "    p=0\n",
+    "    file.write(str(p)+\"\\n\")\n",
+    "    for i in range(100):\n",
+    "        coin = r.random()\n",
+    "        if coin<= 0.5:\n",
+    "            p=p-1\n",
+    "        else:\n",
+    "            p=p+1\n",
+    "        file.write(str(p)+\"\\n\")\n",
+    "\n",
+    "with open(\"/Users/beatriz/Documents/GitHub/python-prep/data/random_walk.csv\",\"r\") as file:\n",
+    "    print(file.read())\n",
     "\n",
     "\n",
     "\n",
@@ -223,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
