--- a/practice-problems/Shallow and Deep Copies.ipynb
+++ b/practice-problems/Shallow and Deep Copies.ipynb
@@ -182,8 +182,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea0dddb4",
+   "metadata": {},
+   "source": [
+    "Both lists should be changed."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f937d38",
    "metadata": {},
    "outputs": [],
@@ -193,10 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "368f1217",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 1 4]\n",
+      "[1 2 1 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1,2,3,4])\n",
     "b = a\n",
@@ -217,12 +234,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b9329a74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "[1 2 1 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "## code here\n"
+    "## code here\n",
+    "a = np.array([1,2,3,4])\n",
+    "b = a.copy()\n",
+    "\n",
+    "b[2] = 1\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547a51a2",
+   "metadata": {},
+   "source": [
+    "It does not."
    ]
   },
   {
@@ -235,13 +276,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7c462491",
    "metadata": {},
    "outputs": [],
    "source": [
     "## code here\n",
-    "\n"
+    "\n",
+    "del a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dbb81577",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ma\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fdece5a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'b' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mb\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'b' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
@@ -253,8 +339,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0603d032",
+   "metadata": {},
+   "source": [
+    "It is not. Pandas makes deep copies."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "572d833f",
    "metadata": {},
    "outputs": [],
@@ -268,20 +362,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3c70a4d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## code here\n"
+    "## code here\n",
+    "df_copy = df.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d335a43f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df = \n",
+      "   column_1 column_2  column_3\n",
+      "0       435       ab      True\n",
+      "1       999       bc      True\n",
+      "2       545       de     False\n",
+      "\n",
+      "df_copy = \n",
+      "   column_1 column_2  column_3\n",
+      "0       435       ab      True\n",
+      "1       999       bc      True\n",
+      "2       545       cd     False\n"
+     ]
+    }
+   ],
    "source": [
     "df_copy.loc[2, 'column_2'] = \"cd\"\n",
     "\n",
