--- a/practice-problems/pandas.ipynb
+++ b/practice-problems/pandas.ipynb
@@ -20,14 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n",
-    "\n",
+    "import pandas as pd\n",
+    "print(pd.__version__)\n",
     "\n"
    ]
   },
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +58,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>times_used</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>apple</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pandas</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>numpy</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>code</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>erdos</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     word  times_used\n",
+       "0   apple           3\n",
+       "1     cat          14\n",
+       "2  pandas           2\n",
+       "3   numpy           0\n",
+       "4    code         100\n",
+       "5   erdos          19"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "df = pd.DataFrame({\"word\":words,\"times_used\":counts})\n",
     "\n",
-    "\n",
-    "\n"
+    "df\n"
    ]
   },
   {
@@ -70,15 +153,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "times_used    100\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>times_used</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>code</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   word  times_used\n",
+       "4  code         100"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "print(df.max(numeric_only=True))\n",
     "\n",
-    "\n",
-    "\n"
+    "df.loc[df.times_used == df.times_used.max()]\n"
    ]
   },
   {
@@ -90,53 +226,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   position\n",
+      "0         0\n",
+      "\n",
+      "     position\n",
+      "100       -14\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "rwalk = pd.read_csv(\"../data/random_walk.csv\")\n",
     "\n",
+    "print(rwalk.head(1))\n",
+    "print()\n",
+    "print(rwalk.tail(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "position   -8.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Code here\n",
+    "\n",
+    "rwalk.median()\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Describe the walk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>101.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-8.693069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.747089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-17.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-13.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>-5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         position\n",
+       "count  101.000000\n",
+       "mean    -8.693069\n",
+       "std      4.747089\n",
+       "min    -17.000000\n",
+       "25%    -13.000000\n",
+       "50%     -8.000000\n",
+       "75%     -5.000000\n",
+       "max      0.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n",
+    "rwalk.describe()\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Code here\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "Values and index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RangeIndex(start=0, stop=101, step=1)\n",
+      "\n",
+      "[[  0]\n",
+      " [ -1]\n",
+      " [  0]\n",
+      " [ -1]\n",
+      " [ -2]\n",
+      " [ -1]\n",
+      " [  0]\n",
+      " [ -1]\n",
+      " [ -2]\n",
+      " [ -1]\n",
+      " [ -2]\n",
+      " [ -3]\n",
+      " [ -4]\n",
+      " [ -5]\n",
+      " [ -6]\n",
+      " [ -5]\n",
+      " [ -6]\n",
+      " [ -7]\n",
+      " [ -8]\n",
+      " [ -7]\n",
+      " [ -6]\n",
+      " [ -7]\n",
+      " [ -8]\n",
+      " [ -7]\n",
+      " [ -8]\n",
+      " [ -7]\n",
+      " [ -6]\n",
+      " [ -5]\n",
+      " [ -4]\n",
+      " [ -3]\n",
+      " [ -4]\n",
+      " [ -5]\n",
+      " [ -6]\n",
+      " [ -5]\n",
+      " [ -4]\n",
+      " [ -5]\n",
+      " [ -4]\n",
+      " [ -3]\n",
+      " [ -4]\n",
+      " [ -5]\n",
+      " [ -6]\n",
+      " [ -5]\n",
+      " [ -4]\n",
+      " [ -3]\n",
+      " [ -4]\n",
+      " [ -5]\n",
+      " [ -4]\n",
+      " [ -5]\n",
+      " [ -6]\n",
+      " [ -7]\n",
+      " [ -8]\n",
+      " [ -9]\n",
+      " [-10]\n",
+      " [-11]\n",
+      " [-12]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-15]\n",
+      " [-16]\n",
+      " [-17]\n",
+      " [-16]\n",
+      " [-15]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-12]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-12]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-12]\n",
+      " [-11]\n",
+      " [-12]\n",
+      " [-11]\n",
+      " [-12]\n",
+      " [-13]\n",
+      " [-12]\n",
+      " [-13]\n",
+      " [-12]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-12]\n",
+      " [-11]\n",
+      " [-12]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-14]\n",
+      " [-15]\n",
+      " [-14]\n",
+      " [-13]\n",
+      " [-14]]\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
     "\n",
-    "\n",
+    "print(rwalk.index)\n",
+    "print()\n",
+    "print(rwalk.values)\n",
     "\n"
    ]
   },
@@ -149,28 +522,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a\\tb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1\\ta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2\\tb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3\\tc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a\\tb\n",
+       "0  1\\ta\n",
+       "1  2\\tb\n",
+       "2  3\\tc"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
     "\n",
-    "\n",
+    "df = pd.read_csv(\"../data/a_table.tsv\")\n",
+    "df\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b\n",
+       "0  1  a\n",
+       "1  2  b\n",
+       "2  3  c"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n",
+    "df = pd.read_table(\"../data/a_table.tsv\")\n",
+    "df\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can interpret the reading"
    ]
   },
   {
@@ -363,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
