--- a/practice-problems/Writing to File and Importing a Package.ipynb
+++ b/practice-problems/Writing to File and Importing a Package.ipynb
@@ -348,7 +348,7 @@
     "with open(\"/Users/beatriz/Documents/GitHub/python-prep/data/random_walk.csv\",\"r\") as file:\n",
     "    print(file.read())\n",
     "\n",
-    "\n",
+    "file.close()\n",
     "\n",
     "\n"
    ]
